openapi frissítése, stb
